<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/Layout.Box"
    android:layout_marginBottom="10dp"> 
    
    <TextView
		style="@style/Textview.Title"
   		android:text="@string/use"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">	    
	    <TextView
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
	   		android:text="@string/social_networks_twitter_use"
	   		android:layout_weight="1"/>
	    <RelativeLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1">
		    <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
		   		android:src="@drawable/img_five_stars"
		   		android:layout_alignParentRight="true"
		   		android:layout_marginRight="3dp"/>
	    </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">	    
	    <TextView
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
	   		android:text="@string/social_networks_googleplus_use"
	   		android:layout_weight="1"/>
	    <RelativeLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1">
		    <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
		   		android:src="@drawable/img_five_stars"
		   		android:layout_alignParentRight="true"
		   		android:layout_marginRight="3dp"/>
	    </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">	    
	    <TextView
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
	   		android:text="@string/social_networks_facebook_use"
	   		android:layout_weight="1"/>
	    <RelativeLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1">
		    <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
		   		android:src="@drawable/img_four_stars"
		   		android:layout_alignParentRight="true"
		   		android:layout_marginRight="3dp"/>
	    </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp">	    
	    <TextView
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
	   		android:text="@string/social_networks_linkedin_use"
	   		android:layout_weight="1"/>
	    <RelativeLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1">
		    <ImageView
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
		   		android:src="@drawable/img_four_stars"
		   		android:layout_alignParentRight="true"
		   		android:layout_marginRight="3dp"/>
	    </RelativeLayout>
    </LinearLayout> 
    
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_marginBottom="10dp"
	    style="@style/Layout.Box">
	    <TextView
			style="@style/Textview.Title"
	   		android:text="@string/other_data_title"/>	    
	    <TextView
	        android:layout_marginBottom="5dp"
			style="@style/Textview.Description"
	   		android:text="@string/other_data_description"/> 
	</LinearLayout>     
     
</LinearLayout>	